Fixed x scrollbar height

--- a/public/styles/reset.css
+++ b/public/styles/reset.css
@@ -20,6 +20,7 @@ body {
 
 *::-webkit-scrollbar {
   width: 5px;
+  height: 5px;
 }
  
 *::-webkit-scrollbar-track {
